# proto-claude-code-plugin

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  proto.rs
