[package]
name = "claude_code_plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[features]
default = ["wasm"]
wasm = []

[dependencies]
extism-pdk = "1.2.0"
proto_pdk = "0.32.6"
serde = "1.0.203"
serde_json = "1.0"

[dev-dependencies]
proto_pdk_test_utils = "0.43.5"
starbase_sandbox = "0.10.5"
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
